--- a/CaseHub/res/values/strings.xml
+++ b/CaseHub/res/values/strings.xml
@@ -2,14 +2,23 @@
 <resources>
 
     <string name="app_name">CWRU Hub</string>
+    
     <string name="title_section1">Greenies</string>
     <string name="title_section2">Laundry</string>
     <string name="title_section3">Schedule</string>
     <string name="title_section4">Campus Map</string>
     <string name="title_section5">Dining Halls</string>
+    
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
+    
+    <!-- SCHEDULER -->
+    <string name="login_prompt">Please log in with your CaseID.</string>
+    <string name="login_button">Log In</string>
+    <string name="username">Case ID</string>
+    <string name="password">Password</string>
 
 </resources>
