Added hour divider stripes to Schedule layout.

--- a/CaseHub/res/values/strings.xml
+++ b/CaseHub/res/values/strings.xml
@@ -31,20 +31,20 @@
     <string name="friday">FRI</string>
     <string name="saturday">SAT</string>
     
-    <string name="time7am">7 AM</string>
-    <string name="time8am">8 AM</string>
-    <string name="time9am">9 AM</string>
-    <string name="time10am">10 AM</string>
-    <string name="time11am">11 AM</string>
-    <string name="time12pm">12 PM</string>
-    <string name="time1pm">1 PM</string>
-    <string name="time2pm">2 PM</string>
-    <string name="time3pm">3 PM</string>
-    <string name="time4pm">4 PM</string>
-    <string name="time5pm">5 PM</string>
-    <string name="time6pm">6 PM</string>
-    <string name="time7pm">7 PM</string>
-    <string name="time8pm">8 PM</string>
-    <string name="time9pm">9 PM</string>
+    <string name="time7am">7a</string>
+    <string name="time8am">8a</string>
+    <string name="time9am">9a</string>
+    <string name="time10am">10a</string>
+    <string name="time11am">11a</string>
+    <string name="time12pm">12p</string>
+    <string name="time1pm">1p</string>
+    <string name="time2pm">2p</string>
+    <string name="time3pm">3p</string>
+    <string name="time4pm">4p</string>
+    <string name="time5pm">5p</string>
+    <string name="time6pm">6p</string>
+    <string name="time7pm">7p</string>
+    <string name="time8pm">8p</string>
+    <string name="time9pm">9p</string>
 
 </resources>
