Login dialog officially works, now just have to make it only show the first time and whenever a refresh is requested.

--- a/CaseHub/res/values/strings.xml
+++ b/CaseHub/res/values/strings.xml
@@ -20,6 +20,7 @@
     <!-- SCHEDULER -->
     <string name="login_prompt">Please log in with your CaseID.</string>
     <string name="login_button">Log In</string>
+    <string name="cancel">Cancel</string>
     <string name="username">Case ID</string>
     <string name="password">Password</string>
     
