So the action bar in Schedule view has a refresh button that doesn't segfault now.

--- a/CaseHub/res/values/strings.xml
+++ b/CaseHub/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="login_button">Log In</string>
     <string name="cancel">Cancel</string>
     
-    <string name="refresh_schedule">Refresh</string>
+    <string name="schedule_refresh">Refresh</string>
     
     <string name="sunday">SUN</string>
     <string name="monday">MON</string>
