--- a/CaseHub/res/values/strings.xml
+++ b/CaseHub/res/values/strings.xml
@@ -60,4 +60,5 @@
     	<item>Route B</item>
     	<item>UCRC Route</item>
     </string-array>
+    <string name="action_fav">Show/Hide Favorites</string>
 </resources>
