--- a/CaseHub/res/values/strings.xml
+++ b/CaseHub/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="login_button">Log In</string>
     <string name="cancel">Cancel</string>
     <string name="okay">OK</string>
+    <string name="calendar_export_title">Export to Google Calender</string>
+    <string name="calendar_export">Export to Calendar</string>
     <string name="autosilent_title">AutoSilent Settings</string>
     <string-array name="autosilent_options">
         <item>Set to silent during classes</item>
@@ -32,7 +34,7 @@
     </string-array>
     
     <string name="schedule_refresh">Refresh</string>
-    <string name="schedule_silent">AutoSilent</string>
+    <string name="schedule_silent">AutoSilent Settings</string>
     
     <string name="sunday">SUN</string>
     <string name="monday">MON</string>
