--- a/CaseHub/res/values/strings.xml
+++ b/CaseHub/res/values/strings.xml
@@ -24,8 +24,14 @@
     <string name="login_button">Log In</string>
     <string name="cancel">Cancel</string>
     <string name="okay">OK</string>
+    
+    
     <string name="calendar_export_title">Export to Google Calender</string>
     <string name="calendar_export">Export to Calendar</string>
+    <string name="export">Export</string>
+    <string name="pick_start_date">Start Date</string>
+    <string name="pick_end_date">End Date</string>
+    
     <string name="autosilent_title">AutoSilent Settings</string>
     <string-array name="autosilent_options">
         <item>Set to silent during classes</item>
