--- a/CaseHub/res/values/strings.xml
+++ b/CaseHub/res/values/strings.xml
@@ -61,4 +61,11 @@
     	<item>UCRC Route</item>
     </string-array>
     <string name="action_fav">Show/Hide Favorites</string>
+    
+    <!-- DINING -->
+    <string name="leutner">Leutner</string>
+    <string name="fribley">Fribley</string>
+    <string name="tomlinson">Tomlinson</string>
+    <string name="brb_cafe">BRB Cafe</string>
+    <string name="wrb_cafe">WRB Cafe</string>
 </resources>
