--- a/CaseHub/res/values/strings.xml
+++ b/CaseHub/res/values/strings.xml
@@ -79,4 +79,8 @@
     	<item>UCRC Route</item>
     </string-array>
     <string name="action_fav">Show/Hide Favorites</string>
+    
+    <!-- LAUNDRY -->
+    <string name="refresh_houses">Refresh list of houses</string>
+    
 </resources>
